# whetstone-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  Dockerfile.ci  README.md  TESTING.md  alembic.ini  pyproject.toml
.github/workflows/: release-parity.yml  whetstone_tests.yml
artifacts/q1_model_candidates/: 20260630_184236_model_candidates.md  20260630_202920_model_candidates.csv  20260630_202920_model_candidates.md
artifacts/q2_compression_range/: 20260630_185956_compression_range.csv  20260630_202926_compression_range.csv  20260630_202926_compression_range.md
artifacts/q3_repeat_stability/: 20260630_184239_repeat_stability.md  20260630_185957_repeat_stability.csv  20260630_202931_repeat_stability.csv  20260630_202931_repeat_stability.md
artifacts/q4_task_variation/: 20260630_185959_task_variation.csv  20260630_203031_task_variation.csv  20260630_203031_task_variation.md
audit/: code-compression-project-audit.html  current-state-and-dependencies.html  doc.css  foundation-review.html  repository-scope-audit.html
configs/experiments/: humaneval_encdec_smoke.json
configs/models/: gpt-oss-120b-openai.json  gpt-oss-120b-openrouter.json  gpt54-nano-openai.json  qwen3-coder-flash-openrouter.json
configs/splits/: tiny.json
design/: codex-agent-run.html  concrete-changes.html  copro-run.html  doc.css  eval-run.html  flow.css  gepa-run.html  miprov2-run.html  quick-test-rubric.html  vocab_and_defs.html
docs/: append-only-eval-records-design.md  completed-design-and-implementation-choices.md  cutover-operator-tooling.md  inspecting_backfill.md  platform-graph-workflow-implementation.md  release-recovery-runbook.md  remaining-implementation-intentions.md  running_copro.md  testing_logs.md  v0-migration-completion-checklist.md  v1-schema-migrations.md
docs/agents/: domain.md  issue-tracker.md  planning.md  triage-labels.md
docs/composable/: code_parse_test.md  graph_runner.md  llm_provider.md  migration_log.md  overall.md  platform.md  prompt.md  serialize.md
docs/prompts/: done-add-backfill-and-rescore-concurrency-controls.md  done-execute-encdec-v0-backfill-smoke.md  done-implement-v1-encdec-smoke-experiment.md  implement-hpm-selection-analysis-scripts.md  implement-minimal-copro-encdec-optimizer.md  implement-v1-encdec-smoke-experiment.md
docs/ref/: limit_enforcement_points.md
figs/q1_model_candidates/: 20260630_184435_run.html  20260630_184447_run.html  20260630_185954_run.html  20260630_202920_run.html
figs/q2_compression_range/: 20260630_184448_run.html  20260630_185956_run.html  20260630_202926_run.html
figs/q3_repeat_stability/: 20260630_184450_run.html  20260630_185957_run.html  20260630_202931_run.html
figs/q4_task_variation/: 20260630_184451_run.html  20260630_185959_run.html  20260630_203031_run.html
plans/: doc.css  validation-stack-rebuild-round2.html  validation-stack-rebuild.html
research/quick-test-tasks/: brainstorm.html  brainstorm.md  candidates-merged.html  candidates-merged.md  candidates-table.html  landscape.html  landscape.md  recommendations-round2.html  recommendations-round2.md  recommendations.html  recommendations.md  reflection.html  reflection.md  research-classification-under-nonstandard-remappe.html  research-classification-under-nonstandard-remappe.md  research-constructed-language-translation-and-lay.html  research-constructed-language-translation-and-lay.md  research-constructed-notation-arithmetic-and-nons.html  research-constructed-notation-arithmetic-and-nons.md  research-deterministic-simulation-state-machines-.html  research-deterministic-simulation-state-machines-.md  research-formal-grammars-term-rewriting-and-logic.html  research-formal-grammars-term-rewriting-and-logic.md  research-instruction-following-and-constrained-ge.html  research-instruction-following-and-constrained-ge.md  research-prompt-opt-literature.html  research-prompt-opt-literature.md  research-structured-extraction-and-canonicalizati.html  research-structured-extraction-and-canonicalizati.md  research-synthetic-rule-induction-and-composition.html  research-synthetic-rule-induction-and-composition.md  trends-2025-2026.html  trends-2025-2026.md
scripts/analysis/: q1_model_candidates.py  q2_compression_range.py  q3_repeat_stability.py  q4_task_variation.py  sample_run_inspector.py
scripts/ci/: coverage.sh  dbos.sh  integration.sh  lint.sh  slow.sh  unit.sh
scripts/db/: archive_current_v1_tables.py
scripts/e2e/: fixture_smoke.py
scripts/golden/: generate_golden_fixtures.py
scripts/optimization/: run_copro_encdec.py
src/dr_dspy/: serialization.py
src/whetstone/: __init__.py  clock.py  dspy_serialization.py  node_ops.py  publication.py  serialization.py
tests/: README.md  conftest.py  serialization_support.py  test_analysis_frames.py  test_analysis_inspect.py  test_analysis_scripts.py  test_connections.py  test_cutover_tooling.py  test_db_io.py  test_db_migrations.py  test_db_schema.py  test_dspy_serialization.py  test_enqueue_runtime.py  test_eval_failures_generation.py  test_eval_failures_policy.py  test_eval_failures_recording.py  test_golden_fixtures.py  test_graph_execution.py  test_graph_imports.py  test_harness_workflow_race.py  test_humaneval_primitives.py  test_import_inference.py  test_live_sweep.py  test_lm_boundary.py  test_lm_imports.py  test_lm_utils.py  test_optimization_copro.py  test_optimization_copro_checkpoint.py  test_platform_boundaries.py  test_platform_cli_env.py  test_platform_dataset_snapshot.py  test_platform_dbos_bootstrap.py  test_platform_dbos_compat.py  test_platform_failure_boundary.py  test_platform_graph_workflow.py  test_platform_integrity.py  test_platform_jsonl_specs.py  test_platform_node_execution.py  test_platform_operations.py  test_platform_progress_log.py  (+17 more)
tests/authority/: support.py  test_aggregation.py  test_authority.py  test_mapping.py  test_records_and_persistence.py  test_selection_certification.py
tests/code_eval/: __init__.py  support.py  test_aggregate.py  test_compression_selection.py  test_correctness.py  test_no_duplicate_types.py  (+4 more)
(+645 files in other folders)
