[project]
name = "whetstone-ai"
version = "0.1.0"
description = "Evaluation core being rebuilt on the dr-* libraries: failure classification and the LM provider boundary"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.13, <3.15"
dependencies = [
    "dr-code",
    "dr-graph",
    "dr-platform",
    "dr-providers",
    "dr-serialize",
    "dr-store",
    "whetstone-envs",
]

[dependency-groups]
# dbos and psycopg are test-only: the failure-policy tests verify
# classification behavior against their real error types.
dev = [
    "dbos>=2.25.0",
    "pre-commit>=4.6.0",
    "psycopg>=3.3.4",
    "pytest>=8.4.2",
    "ruff>=0.15.10",
    "ty>=0.0.54",
]

# TEMPORARY: editable path deps for cross-repo integration testing.
# do-not-merge-as-is. Original git sources (restore before merge):
#   dr-code = { git = "https://github.com/danielle-rothermel/dr-code", branch = "main" }
#   dr-graph = { git = "https://github.com/danielle-rothermel/dr-graph", branch = "main" }
#   dr-platform = { git = "https://github.com/danielle-rothermel/dr-platform", branch = "main" }
#   dr-providers = { git = "https://github.com/danielle-rothermel/dr-providers", rev = "befbef782f249c6a517f34fb6965d4e10b74cf29" }
#   dr-serialize = { git = "https://github.com/danielle-rothermel/dr-serialize", branch = "main" }
#   dr-store = { git = "https://github.com/danielle-rothermel/dr-store", branch = "main" }
#   whetstone-envs = { git = "https://github.com/danielle-rothermel/whetstone-envs", branch = "main" }
[tool.uv.sources]
dr-code = { path = "../dr-code", editable = true }
dr-graph = { path = "../dr-graph", editable = true }
dr-platform = { path = "../dr-platform", editable = true }
dr-providers = { path = "../dr-providers", editable = true }
dr-serialize = { path = "../dr-serialize", editable = true }
dr-store = { path = "../dr-store", editable = true }
whetstone-envs = { path = "../whetstone-envs", editable = true }

[project.scripts]
whetstone-validate = "whetstone.runner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whetstone"]

[tool.ruff]
include = ["src/**/*.py", "scripts/**/*.py", "tests/**/*.py"]
line-length = 79
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["whetstone"]

[tool.ty.environment]
extra-paths = ["..", "tests"]

[tool.ty.src]
include = ["src/**/*.py", "scripts/**/*.py", "tests/**/*.py"]
