[project]
name = "whetstone-ai"
version = "0.1.0"
description = "Evaluation core being rebuilt on the dr-* libraries: failure classification and the LM provider boundary"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.13, <3.15"
dependencies = [
    "dr-code",
    "dr-graph>=0.1.0,<0.2",
    "dr-platform",
    "dr-providers>=0.2.0,<0.3",
    "dr-serialize>=0.1.0,<0.2",
    "dr-store>=0.1.0,<0.2",
    "numpy>=2.5.1",
    "whetstone-envs",
    "zstandard>=0.25.0",
]

[dependency-groups]
# dbos and psycopg are test-only: the failure-policy tests verify
# classification behavior against their real error types.
dev = [
    "dbos>=2.25.0",
    "pre-commit>=4.6.0",
    "psycopg>=3.3.4",
    "pytest>=8.4.2",
    "ruff>=0.15.10",
    "ty>=0.0.54",
]

# Unreleased dr-* packages use exact reviewed revisions.
[tool.uv.sources]
dr-code = { git = "https://github.com/danielle-rothermel/dr-code", rev = "be6c53e5e99bf5f007160b3a3603727dc2cd464d" }
dr-platform = { git = "https://github.com/danielle-rothermel/dr-platform", rev = "3f175698c6e15e807dac4a9721d52e92d273edce" }
whetstone-envs = { git = "https://github.com/danielle-rothermel/whetstone-envs", rev = "90729bda2b207a845b1b7e499754f9b913201a40" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whetstone"]

[tool.ruff]
include = ["src/**/*.py", "scripts/**/*.py", "tests/**/*.py"]
line-length = 79
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["whetstone"]

[tool.ty.environment]
extra-paths = ["..", "tests"]

[tool.ty.src]
include = ["src/**/*.py", "scripts/**/*.py", "tests/**/*.py"]
